Update 2. Add Two Numbers.md

--- a/leetcode/2. Add Two Numbers.md
+++ b/leetcode/2. Add Two Numbers.md
@@ -49,15 +49,13 @@ import java.math.BigInteger;
 
 class Solution {
     public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
-        ListNode dummy = new ListNode(0);
         StringBuilder sb1 = new StringBuilder(), sb2 = new StringBuilder();
         while(l1 != null) {sb1.append(l1.val); l1 = l1.next;}
         while(l2 != null) {sb2.append(l2.val); l2 = l2.next;}
         BigInteger result = new BigInteger(sb1.reverse().toString()).add(new BigInteger(sb2.reverse().toString()));
-        new StringBuilder(result.toString()).reverse().chars()
-            .mapToObj(ch -> new ListNode(ch - '0'))
-            .reduce(dummy, (current, next) -> {current.next = next; return next;});
-        return dummy.next;
+        return Stream.of(result.toString().split(""))
+            .map(Integer::parseInt).map(ListNode::new)
+            .reduce((big, little) -> {little.next = big; return little;}).get();
     }
 }
 ```
