Update 2. Add Two Numbers.md

--- a/leetcode/2. Add Two Numbers.md
+++ b/leetcode/2. Add Two Numbers.md
@@ -45,6 +45,7 @@ var addTwoNumbers = function(l1, l2) {
 ```
 * list -> string -> BigInt, add two BigInts, bigInt -> string -> list or bigInt -> list
 ```Java
+// this version is slower, runtime about 100ms
 import java.math.BigInteger;
 
 class Solution {
@@ -59,3 +60,29 @@ class Solution {
     }
 }
 ```
+
+```Java 
+// this version is faster, runtime is about 40ms 
+class Solution {
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+        ListNode dummy, current;
+        dummy = current = new ListNode(0);
+        int carry = 0;
+        while (l1 != null || l2 != null || carry > 0) {
+            int value = 0;
+            int l1v = 0, l2v = 0 ;
+            if (l1 != null) l1v = l1.val;
+            if (l2 != null) l2v = l2.val;
+            value = l1v + l2v + carry;
+            carry = value / 10;
+            value = value % 10;
+            current.next = new ListNode(value);
+            current = current.next;
+            if (l1 != null) l1 = l1.next;
+            if (l2 != null) l2 = l2.next;
+        }
+        return dummy.next;
+    }
+}
+```
+
