Update 43. Multiply Strings.md

--- a/leetcode/43. Multiply Strings.md
+++ b/leetcode/43. Multiply Strings.md
@@ -68,7 +68,7 @@ class Solution {
     public String multiply(String num1, String num2) {
         int count = num1.length() + num2.length();
         byte[] out = new byte[count];
-        int carry = 0;
+        int carry = 0; // waste space
         
         for (int i = num1.length() - 1; i >= 0; --i) {
             for (int j = num2.length() - 1; j >=0; --j) {
@@ -97,7 +97,7 @@ class Solution {
         char[] a = num1.toCharArray();
         char[] b = num2.toCharArray();
         int[] out = new int[count];
-        int carry = 0;
+        int carry = 0; // waste sapce
         
         for (int i = a.length - 1; i >= 0; --i) {
             for (int j = b.length - 1; j >=0; --j) {
@@ -116,6 +116,29 @@ class Solution {
         while (out[i] == 0 && i < count - 1) ++i; 
         for(; i < count; ++i) sb.append(out[i]);
         return sb.toString();
+    }
+}
+
+// simplify above code
+class Solution {
+    public String multiply(String num1, String num2) {
+        int count = num1.length() + num2.length();
+        char[] a = num1.toCharArray();
+        char[] b = num2.toCharArray();
+        int[] out = new int[count];
+        
+        for (int i = a.length - 1; i >= 0; --i) {
+            for (int j = b.length - 1; j >=0; --j) {
+                out[i + j + 1] += (a[i] - '0') * (b[j] - '0');
+                out[i + j] += out[i + j + 1] / 10;
+                out[i + j + 1] %= 10;
+            }
+        }
+        StringBuilder sb = new StringBuilder();
+        int i = 0;
+        while (i < count && out[i] == 0) ++i; 
+        for(; i < count; ++i) sb.append(out[i]);
+        return sb.length() == 0 ? "0" : sb.toString();
     }
 }
 ```
